# sony-scrape

./: .gitignore  .pre-commit-config.yaml  README.md  data.py  headphones.csv  main.py  product.csv  pyproject.toml  test.json
