[project]
name = "sony-scrape"
version = "0.1.0"
description = ""
authors = [
    {name = "Bori Márton",email = "50830608+martonbori@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
types-requests = "^2.32.0.20250328"
mypy = "^1.15.0"
